[package]
name = "appbiotic-error"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive-new", "serde"]
serde = ["serde/derive", "serde/std"]
derive-new = ["derive-new/std"]

[dependencies]
derive-new = { version = "0.7.0", optional = true }
serde = { version = "1.0.217", optional = true }
strum = { version = "0.26.3", features = ["derive", "std"] }
thiserror = { version = "2.0.9", features = ["std"] }

[dev-dependencies]
serde_json = { version = "1.0.134", features = ["std"] }
