[package]
name = "appbiotic-error"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde", "tonic"]
serde = ["serde/derive", "serde/std"]
tonic = ["dep:tonic"]

[dependencies]
derive-new = { version = "0.7.0", features = ["std"] }
serde = { version = "1.0.217", optional = true }
strum = { version = "0.26.3", features = ["derive", "std"] }
thiserror = { version = "2.0.9", features = ["std"] }
tonic = { version = "0.12.3", optional = true }

[dev-dependencies]
serde_json = { version = "1.0.134", features = ["std"] }
